# packages/types/src/server/strategy.ts
@@ -1,16 +1,0 @@
-export interface StrategyMetaData {
-    language: "JavaScript" | "TypeScript";
-    modifiedAt: Date;
-    path: string;
-    basename: string;
-}
-
-export interface StrategyData extends StrategyMetaData {
-    value: string;
-}
-
-export interface StrategyTemplateOptions {
-    exchangeId: string;
-    pair: string;
-    initialBalance: Record<string, number>;
-}
